--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Hometown</a></h3>
-										<p> I grew up on the 4 line in the Bronx throughout </p>
+										<p> From the Bronx, New York </p>
 									</header>
 								</article>
 								<article>
@@ -74,7 +74,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Education & Jobs</a></h3>
-										<p>feugiat amet tempus</p>
+										<p>Attending CUNY Hunter & works in a nonprofit program, SEO </p>
 									</header>
 								</article>
 								<article>
@@ -83,7 +83,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Projects</a></h3>
-										<p>Lorem etiam nullam</p>
+										<p> To Be Added</p>
 									</header>
 								</article>
 								<article>
@@ -92,7 +92,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Interests</a></h3>
-										<p>Nisl sed aliquam</p>
+										<p> Photography Fashion & Etc </p>
 									</header>
 								</article>
 							
