--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Interests</a></h3>
-										<p> Photography Fashion & Etc </p>
+										<p> Photography Fashion etc</p>
 									</header>
 								</article>
 							
