--- a/landing.html
+++ b/landing.html
@@ -78,7 +78,7 @@
 											<header class="major">
 												<h3>Interests</h3>
 											</header>
-											<p>For as long as I can remember, I've held a camera in my hands. I love capturing every moment and creating beautiful images. I love photography and finding new ways for people to fall in love with themselves through it. I would love a chance to design and direct my own shoots and repel the wonderful ideas I have in mind into the real world! </p>
+											<p>For as long as I can remember, I've held a camera in my hands. My gallery never went under 1,000 photos; it was essential for me to capture the full picture. I love photography and finding new ways for people to fall in love with themselves through it. In the future, I want to design and direct my own shoots and repel the wonderful ideas I have in mind into the real world! </p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
@@ -94,10 +94,8 @@
 											<header class="major">
 												<h3>Projects</h3>
 											</header>
-											<p> I hope to add projects in this section as I become more knowledgeable on the art of codingQ</p>
-											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul>
+											<p> I hope to add projects in this section as I become more knowledgeable on the art of coding!</p>
+										
 										</div>
 									</div>
 								</section>
@@ -108,11 +106,11 @@
 							<section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>Codepath Introduction Video</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p> Get to know Faaizah through the screen! Watch this video to learn about her ambitions!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
+										<li><a href="generic.html" class="button next">Listen in!</a></li>
 									</ul>
 								</div>
 							</section>
@@ -149,25 +147,17 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">faaizahafoda02@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
+										<h3>Resume</h3>
 										<span>(000) 000-0000 x12387</span>
 									</div>
 								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
+								
 							</section>
 						</div>
 					</section>
