--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="hunterbridge.jpg" alt="" />
+										<img src="skybridge.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Education & Jobs</a></h3>
