--- a/landing.html
+++ b/landing.html
@@ -63,7 +63,7 @@
 									<header class="major">
 										<h2>Education & Jobs </h2>
 									</header>
-									<p> I am currently a second year computer science student at Hunter College. In addition, I am planning to pursue a minor in anthropology! Outside of Hunter, I attended a college-readiness program called SEO that aims to bridge the education gap between low income communities and their high incomed counterparts. When I am not a scholar for the program, I am taking on leadership roles like last summer when I worked in the Operations Team during the Summer for the upperclassmen (9th graders). This past winter, I joined the reecurtment team and asisted on reading applications for incoming scholars and providing insights on if they could be seen as a member of the new class. An extensive list of jobs I've taken can be found under RESUME. </p>
+									<p> I am currently a second year computer science student at Hunter College. In addition, I am planning to pursue a minor in anthropology! Outside of Hunter, I attended a college-readiness program called SEO that aims to bridge the education gap between low income communities and their high incomed counterparts. When I am not a scholar for the program, I am taking on leadership roles like last summer when I worked in the Operations Team overseeing the underclassmen (9th graders). This past winter, I joined the recruitment team and asisted on reading applications for incoming scholars, providing insights on potiential member of the new class. An extensive list of jobs I've taken can be found under RESUME. </p>
 								</div>
 							</section>
 
@@ -78,7 +78,7 @@
 											<header class="major">
 												<h3>Interests</h3>
 											</header>
-											<p>For as long as I can remember, I've held a camera in my hands. My gallery never went under 1,000 photos; it was essential for me to capture the full picture. I love photography and finding new ways for people to fall in love with themselves through it. In the future, I want to design and direct my own shoots and repel the wonderful ideas I have in mind into the real world! </p>
+											<p>For as long as I can remember, I've held a camera in my hands. My gallery never held less 1,000 photos; it was essential for me to capture the full picture. I love photography and finding new ways for people to fall in love with themselves through it. In the future, I want to design and direct my own shoots and expel the wonderful ideas I have in mind into the real world! </p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
