--- a/landing.html
+++ b/landing.html
@@ -154,7 +154,8 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Resume</h3>
-										<span>(000) 000-0000 x12387</span>
+										<iframe src="Faaizah_Afoda_Resume.pdf" width="100%" height="500px">
+    </iframe>
 									</div>
 								</section>
 								
