--- a/landing.html
+++ b/landing.html
@@ -87,7 +87,7 @@
 								</section>
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="IMG_3298.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -147,14 +147,14 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">faaizahafoda02@gmail.com</a>
+										<a href="mailto:faaizahafoda02@gmail.com">Send email</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Resume</h3>
-										<iframe src="Faaizah_Afoda_Resume.pdf" width="100%" height="500px">
+										<iframe src=".pdf" width="100%" height="500px">
     </iframe>
 									</div>
 								</section>
