--- a/landing.html
+++ b/landing.html
@@ -154,7 +154,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Resume</h3>
-										<iframe src=".pdf" width="100%" height="500px">
+										<button onclick="document.location='Faaizah_Afoda_Resume.pdf'">Resume</button>
     </iframe>
 									</div>
 								</section>
