--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="skybridge.jpg" alt="" />
+										<img src="skybridge.jpg" alt="picture of sky bridge at Hunter college (NYC)" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Education & Jobs</a></h3>
-										<p>Attending CUNY Hunter & works in a nonprofit program, SEO </p>
+										<p>Attending CUNY Hunter & works at a nonprofit program, SEO </p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src= "undercon_1.jpg" alt="" />
+										<img src= "undercon_1.jpg" alt="image labeled under construction" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Projects</a></h3>
@@ -88,7 +88,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="fashion.jpg" alt="" />
+										<img src="fashion.jpg" alt="picture of models on a runway" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Interests</a></h3>
